Correct gap value and add margin-left to btn-group
Fix gap property value and add margin-left.

--- a/style.css
+++ b/style.css
@@ -131,8 +131,9 @@ header a:hover {
 #home btn-group {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: rem;
     margin-top: 2rem;
+    margin-left: 1rem;
 }
 
 /* ==========================================
